--- a/estilos.css
+++ b/estilos.css
@@ -1,29 +1,17 @@
-#inicio{
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    list-style: none;
-    padding: 25px;
-}
 header{
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-}
-#titulo-dere{
-    list-style: none;
+    margin: 0 auto;
+    max-width: 1400px;
     text-decoration: none;
 }
 .container{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
-    margin: 0 50px;
-}
-#titulos{
-    width: 100%;
-justify-content: flex-start;
+    margin: 0 auto;
 }
 #titulo{
     display: flex;
@@ -33,11 +21,11 @@ justify-content: flex-start;
 }
 .inicio{
     display: flex;
-justify-content: space-between;
-align-items: baseline;
-list-style: none;
-padding: 25px;
-text-decoration: none;
+    justify-content: space-between;
+    align-items: baseline;
+    list-style: none;
+    padding: 25px;
+    text-decoration: none;
 }
 main{
     display: flex;
@@ -52,7 +40,7 @@ main{
     flex-wrap: wrap;
     width: 400px;
     padding: 20px;
-    margin: 10px;
+    margin: 10px; 
 }
 .img-container{
     position: relative;
@@ -97,4 +85,7 @@ img{
 }
 .box:hover .precio{
     bottom: 45px;
+}
+.inicio a{
+    text-decoration: none;
 }
